<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    android:layout_width="@dimen/modal_width"
    android:layout_height="@dimen/modal_height"
    android:background="#ffc0ffc0"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:text="@string/you_win"
      android:textColor="@android:color/holo_green_light"
      android:textSize="@dimen/title_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.15"
      tools:ignore="SpUsage" />

    <Button
      android:id="@+id/back_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/modal_button_horizontal_margin"
      android:background="@drawable/blue_button_background"
      android:fontFamily="sans-serif"
      android:paddingHorizontal="@dimen/modal_button_horizontal_padding"
      android:paddingTop="@dimen/modal_button_padding_top"
      android:paddingBottom="@dimen/modal_button_padding_bottom"
      android:text="@string/back"
      android:textAllCaps="false"
      android:textSize="@dimen/modal_button_text_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/play_again_button"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text"
      tools:ignore="SpUsage" />

    <Button
      android:id="@+id/play_again_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/modal_button_horizontal_margin"
      android:background="@drawable/green_button_background"
      android:fontFamily="sans-serif"
      android:paddingHorizontal="@dimen/modal_button_horizontal_padding"
      android:paddingTop="@dimen/modal_button_padding_top"
      android:paddingBottom="@dimen/modal_button_padding_bottom"
      android:text="@string/play_again"
      android:textAllCaps="false"
      android:textSize="@dimen/modal_button_text_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/back_button"
      app:layout_constraintTop_toBottomOf="@+id/text"
      tools:ignore="SpUsage" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
